hphp/test/quick/typedef_duplicate3.php.expectf
HipHop Fatal error: The type Existing is already defined to a different class (Existing) in %s on line 6
